--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,20 @@
 .read-the-docs {
   color: #888;
 }
+.container {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #f5f5f5;
+  padding: 16px;
+}
+.subcontainer {
+
+  width: 100%;
+  max-width: 90vw;
+}
 @keyframes pulse {
   0% {
     opacity: 1;
