--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  padding: 0;
+    display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+   width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
